--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-image-crop-picker": "^0.20.3",
+    "react-native-maps": "^0.21.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.3",
     "rn-fetch-blob": "^0.10.12"
