--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-native": "0.55.4",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-google-places": "^2.5.2",
     "react-native-image-crop-picker": "^0.20.3",
     "react-native-maps": "^0.21.0",
+    "react-native-maps-directions": "^1.6.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.3",
     "rn-fetch-blob": "^0.10.12"
