--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^5.0.3",
+    "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
