--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "react-native-image-crop-picker": "^0.20.3",
     "react-native-maps": "^0.21.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.3",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "rn-fetch-blob": "^0.10.12"
   },
   "devDependencies": {
