--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-navigation": "^2.5.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "rn-fetch-blob": "^0.10.12"
+    "rn-fetch-blob": "^0.10.12",
+    "sort-by-distance": "^1.0.1"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
