--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^5.0.3",
+    "geofire": "^4.1.2",
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
@@ -18,6 +19,7 @@
     "react-native-image-crop-picker": "^0.20.3",
     "react-native-maps": "^0.21.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-spinkit": "^1.1.1",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.3",
