--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,7 +137,9 @@ android {
 }
 
 dependencies {
-  compile project(':react-native-google-places')
+  compile project(':rn-fetch-blob')
+  compile project(':react-native-image-crop-picker')
+  implementation (project(':react-native-google-places'))
   compile project(':react-native-spinkit')
   implementation fileTree(dir: "libs", include: ["*.jar"])
   implementation "com.android.support:appcompat-v7:23.0.1"
