--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,16 +149,22 @@ dependencies {
           exclude group: 'com.google.android.gms', module: 'play-services-places'
           exclude group: 'com.google.android.gms', module: 'play-services-location'
       }
-      implementation 'com.google.android.gms:play-services-base:11.6.2'
-      implementation 'com.google.android.gms:play-services-places:11.6.2'
-      implementation 'com.google.android.gms:play-services-location:11.6.2'
+      implementation 'com.google.android.gms:play-services-base:11.8.0'
+      implementation 'com.google.android.gms:play-services-places:11.8.0'
+      implementation 'com.google.android.gms:play-services-location:11.8.0'
       
   implementation(project(':react-native-maps')){
     exclude group: 'com.google.android.gms', module: 'play-services-base'
     exclude group: 'com.google.android.gms', module: 'play-services-maps'
   }
-  implementation 'com.google.android.gms:play-services-base:10.0.1'
-  implementation 'com.google.android.gms:play-services-maps:10.0.1'
+
+  implementation(project(':react-native-firebase')) {
+    transitive = false
+  }
+  
+  implementation "com.google.firebase:firebase-core:11.8.0"
+  implementation 'com.google.android.gms:play-services-base:11.8.0'
+  implementation 'com.google.android.gms:play-services-maps:11.8.0'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -167,3 +173,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
