--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,6 +162,8 @@ dependencies {
     transitive = false
   }
   
+  implementation "com.google.firebase:firebase-auth:11.8.0"
+  implementation "com.google.firebase:firebase-database:11.8.0"
   implementation "com.google.firebase:firebase-core:11.8.0"
   implementation 'com.google.android.gms:play-services-base:11.8.0'
   implementation 'com.google.android.gms:play-services-maps:11.8.0'
