--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
-    "react-native": "0.55.4",
+    "react-native": "^0.58.2",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-firebase": "4.3",
