--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -149,9 +150,11 @@ dependencies {
           exclude group: 'com.google.android.gms', module: 'play-services-places'
           exclude group: 'com.google.android.gms', module: 'play-services-location'
       }
-      implementation 'com.google.android.gms:play-services-base:11.8.0'
-      implementation 'com.google.android.gms:play-services-places:11.8.0'
-      implementation 'com.google.android.gms:play-services-location:11.8.0'
+      implementation 'com.google.android.gms:play-services-base:15.0.1'
+      implementation 'com.google.android.gms:play-services-places:15.0.1'
+      implementation 'com.google.android.gms:play-services-location:15.0.1'
+      implementation 'com.google.android.gms:play-services-maps:15.0.1'
+      implementation 'com.android.support:multidex:1.0.3'
       
   implementation(project(':react-native-maps')){
     exclude group: 'com.google.android.gms', module: 'play-services-base'
@@ -162,11 +165,11 @@ dependencies {
     transitive = false
   }
   
-  implementation "com.google.firebase:firebase-auth:11.8.0"
-  implementation "com.google.firebase:firebase-database:11.8.0"
-  implementation "com.google.firebase:firebase-core:11.8.0"
-  implementation 'com.google.android.gms:play-services-base:11.8.0'
-  implementation 'com.google.android.gms:play-services-maps:11.8.0'
+  implementation "com.google.firebase:firebase-auth:16.0.1"
+  implementation "com.google.firebase:firebase-database:16.0.1"
+  implementation "com.google.firebase:firebase-core:16.0.1"
+  implementation "com.google.firebase:firebase-messaging:17.1.0"
+  
 }
 
 // Run this once to be able to run the application with BUCK
