Solved one serious Hiccup

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-firebase')
   implementation project(':rn-fetch-blob')
   implementation project(':react-native-image-crop-picker')
   implementation (project(':react-native-google-places'))
