--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "firebase": "^5.0.3",
     "geofire": "^4.1.2",
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
-    "react-native": "^0.58.2",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-firebase": "4.3",
@@ -35,10 +36,10 @@
     "sort-by-distance": "^1.0.1"
   },
   "devDependencies": {
-    "babel-jest": "23.2.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "23.2.0",
-    "react-test-renderer": "16.3.1"
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.51.1",
+    "react-test-renderer": "16.6.3"
   },
   "jest": {
     "preset": "react-native"
