--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,7 @@ dependencies {
   implementation "com.google.firebase:firebase-database:16.0.1"
   implementation "com.google.firebase:firebase-core:16.0.1"
   implementation "com.google.firebase:firebase-messaging:17.1.0"
+  implementation "com.google.firebase:firebase-firestore:17.0.2"
   
 }
 
