--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-polyfill": "^6.26.0",
     "firebase": "^5.0.3",
     "geofire": "^4.1.2",
+    "geofirestore": "^3.1.0",
     "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.6.3",
